# magic-i18n

./: CHANGELOG  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: base.py
magic_i18n/: __init__.py  asgi.py  text.py
tests/: test_asgi.py  test_text.py
