[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'magic-i18n'
authors = [
    {name = 'Dmitrii Vlasov', email = 'scailer@yandex.ru'},
]
description = 'Text internationalization with async context magic'
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE.md'}
keywords = ['i18n', 'internationalization', 'async', 'contextvar', 'asgi']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: AsyncIO'
]
dependencies = []
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/scailer/magic-i18n'
Repository = 'https://github.com/scailer/magic-i18n.git'
Changelog = 'https://github.com/scailer/magic-i18n/blob/master/CHANGELOG'

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
    'pytest-runner',
    'coverage',
    'ruff',
    'mypy',
]

[tool.setuptools.dynamic]
version = {attr = 'magic_i18n.__version__'}

[tool.setuptools.packages.find]
where = ['.']
exclude=['tests.*', 'tests']
include = ['magic_i18n']

[tool.pytest.ini_options]
addopts = "--verbose --cov=magic_i18n --cov-report=html --asyncio-mode=auto"
testpaths = [
    "tests",
]

[tool.lint.ruff]
line-length = 100
target-version = 'py313'
preview = true
select = [
    'E', 'W', 'PL', 'C90', 'N', 'UP', 'I',
    # pep8-errors, pep8-warn, pylint, mccabe, pep8-naming, pyupgrade, isort
    'F', 'B', 'A', 'T20', 'BLE', 'RET',
    # flake8, flake8-bugbear, flake8-builtins, flake8-print, flake8-blind-except, flake8-return
    'ANN', 'ASYNC', 'DTZ', 'ISC', 'Q',
    # flake8-annotations, flake8-async, flake8-datetimez, flake8-implicit-str-concat, flake8-quotes
]
ignore = [
    'PLR6301',  # no-self-use
    'ANN101',  # missing-type-self
    'ANN102',  # missing-type-cls
]


[tool.lint.ruff.mccabe]
max-complexity = 10

[tool.lint.ruff.per-file-ignores]
'tests/*' = [
    'PLR2004',  # Checks for the use of unnamed numerical constants ('magic') values in comparisons
    'PLC1901',  # Checks for comparisons to empty strings
    'ANN',  # flake8-annotations
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ['test_*']

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'
multiline-quotes = 'single'
avoid-escape = false

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
lines-after-imports = 2
lines-between-types = 1
split-on-trailing-comma = false

[tool.mypy]
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
    'tests/*',
]
